--- a/01_agama/dirgha/DA_30-10.md
+++ b/01_agama/dirgha/DA_30-10.md
@@ -35,7 +35,7 @@ next: DA_30-11.html
 
 #### Śakra Tolerates Vemacitrin’s Insults
 
-8\. The Buddha told the monks, “Once, the gods and asuras went to war. At the time, Śakra the Lord of Gods gave the Trāyastriṃśa gods this order: ‘All of you, go and do battle with them. If we are victorious, tie up the asura Vemacitrin with five bonds and bring him to the Sudharma Meeting Hall. I want to look at him.’ Accepting Lord Śakra’s instructions, the Trāyastriṃśa gods equipped themselves [with armor and weapons].
+8\. The Buddha told the monks, “Once, the gods and asuras went to war. At the time, Śakra the Lord of Gods gave the Trāyastriṃśa gods this order: ‘All of you, go and do battle with them. If you are victorious, tie up the asura Vemacitrin with five bonds and bring him to the Sudharma Meeting Hall. I want to look at him.’ Accepting Lord Śakra’s instructions, the Trāyastriṃśa gods equipped themselves [with armor and weapons].
 {:#p8}
 
 9\. “The asura Vemacitrin gave the asuras this order: ‘All of you, go and do battle with them. If you are victorious, tie up Śakra the Lord of Gods with five bonds and bring him to the Saptaśirīṣa Meeting Hall. I want to look at him.’ Accepting the asura Vemacitrin’s instructions, the asuras equipped themselves [with armor and weapons].
@@ -69,7 +69,7 @@ Argue with an ignorant person?’
 * {:.verse} “‘Don’t bow to that fool now;\\
 He may become hard to bear after this!\\
 You ought to whip him with a cane;\\
-Make that fool admit his mistake!
+Make that fool admit his mistake!’
 
 15\. “Lord Śakra replied to his attendant in verse:
 {:#p15}
@@ -136,7 +136,7 @@ Is a power that cannot be thwarted.’”
 20\. “That asura ’Citrin said to Lord Śakra, ‘Even if I did put down these weapons and stop to debate doctrine with you, who’d decide who won and who lost?’
 {:#p20}
 
-21\. Lord Śakra instructed him, ‘We will simply hold a discussion. Those who are wise in your host and in my host of gods will decide who wins and who loses.’
+21\. “Lord Śakra instructed him, ‘We will simply hold a discussion. Those who are wise in your host and in my host of gods will decide who wins and who loses.’
 {:#p21}
 
 22\. “The asura said to Lord Śakra, ‘You begin with a verse.’
@@ -149,7 +149,7 @@ Is a power that cannot be thwarted.’”
 * {:.verse} “‘Don’t bow to that fool now;\\
 He may become hard to bear after this!\\
 You ought to whip him with a cane;\\
-Make that fool admit his mistake!
+Make that fool admit his mistake!’
 
 23\. “After he said this verse, the host of asuras rejoiced and cheered, saying, ‘Excellent!’ The host of gods were silent and had nothing to say.
 {:#p23}
@@ -157,7 +157,7 @@ Make that fool admit his mistake!
 24\. “The asura king said to Lord Śakra, ‘It’s your turn to speak a verse.’
 {:#p24}
 
-25\. “Lord Śakra then said to the asura in verse,
+25\. “Lord Śakra then said to the asura in verse:
 {:#p25}
 
 * {:.verse} “‘I always speak with the wise,\\
@@ -221,12 +221,12 @@ It’s the supreme tolerance.
 * {:.verse} A fool claims he has power,\\
 But his power isn’t powerful.\\
 The power of the Dharma’s tolerance\\
-Is a power that cannot be thwarted.’”
+Is a power that cannot be thwarted.’
 
 32\. “After Śakra the Lord of Gods had spoken these verses, the host of Trāyastriṃśa gods celebrated, rejoiced, and cheered, saying, ‘Excellent!’ The host of asuras were silent and had nothing to say.
 {:#p32}
 
-33\. “The host of gods and host of asuras both withdrew a short distance and said to each other, ‘The asura king’s verses were an assault, like drawing a sword on an opponent. They create the root of conflict, increase the bond of anger, and establish the source of the three existences. Śakra the Lord of Gods’ verses attack no one, like not drawing a sword against an opponent. They don’t create conflict, don’t increase the bond of anger, and put an end to the source for the three existences. What the Lord of Gods has said is good, and what the asura has said is not good. The gods are the winners, and the asuras are the losers!’”
+33\. “The host of gods and host of asuras both withdrew a short distance and said to each other, ‘The asura king’s verses were an assault, like drawing a sword on an opponent. They create the root of conflict, increase the bond of anger, and establish the source of the three existences. Śakra the Lord of Gods’ verses attack no one, like not drawing a sword against an opponent. They don’t create conflict, don’t increase the bond of anger, and put an end to the source of the three existences. What the Lord of Gods has said is good, and what the asura has said is not good. The gods are the winners, and the asuras are the losers!’”
 {:#p33}
 
 34\. The Buddha told the monks, “Was Śakra the Lord of Gods another person at the time? Don’t have this view. Why is that? [Śakra the Lord of Gods] was me. That time, I defeated the host of asuras with gentle words.”
@@ -237,7 +237,7 @@ Is a power that cannot be thwarted.’”
 35\. The Buddha told the monks, “Once, the gods and asuras again went to war. That time, the asuras were the victors, and the gods weren’t their equal.
 {:#p35}
 
-36\. “Śakra the Lord of Gods road a thousand-spoked treasure chariot as he fled in terror. In the middle of the road, he saw a nest in a sal tree, and a pair of chicks was in the nest. He told his driver in verse:
+36\. “Śakra the Lord of Gods rode a thousand-spoked treasure chariot as he fled in terror. In the middle of the road, he saw a nest in a sal tree, and a pair of chicks was in the nest. He told his driver in verse:
 {:#p36}
 
 * {:.verse} “‘That tree with two birds in it,\\
@@ -258,7 +258,7 @@ Don’t injure those two birds!’
 
 #### Desire Is the Cause of Warfare
 
-40\. The Buddha told the monks, “Once the Asura [King Rāhu] thought to himself, ‘I have great authority, and my miraculous powers aren’t few, but the Trāyastriṃśa, sun, and moon gods are always in the sky roam around my summit freely. Now, I think I’ll take the sun and the moon and make them into earrings so I could travel freely!’
+40\. The Buddha told the monks, “Once the Asura [King Rāhu] thought to himself, ‘I have great authority, and my miraculous powers aren’t few, but the Trāyastriṃśa, sun, and moon gods are always in the sky roaming around my summit freely. Now, I think I’ll take the sun and the moon and make them into earrings so I could travel freely!’
 {:#p40}
 
 41\. “The Asura King’s anger flared, and he thought about the asura \*Prahata.[\[2\]](#n2){:#ref2} The asura \*Prahata then thought to himself, ‘The Asura King is thinking of me now! We should quickly get ready!’ He ordered those to his right and left to equip themselves with weapons. He then rode a treasure chariot to the Asura King while surrounded by a countless host of asuras. He went before the Asura King and then stood to one side.
@@ -321,10 +321,10 @@ Don’t injure those two birds!’
 60\. “Lord Śakra also thought of the thirty-three gods of the Trāyastriṃśa Heaven. Those thirty-three Trāyastriṃśa Heaven gods then thought, ‘Lord Śakra is thinking of me now! We should quickly get ready!’ They then ordered those to their right and left to equip themselves with weapons. They rode treasure chariots to Lord Śakra while surrounded by countless millions of gods. They went before Lord Śakra and then stood to one side.
 {:#p60}
 
-61\. “Lord Śakra also thought of the remaining gods of the Trāyastriṃśa Heaven. Those remaining gods then thought, ‘Lord Śakra is thinking of me now! We should quickly get ready!’ They ordered those to their right and left to equip themselves with weapons. They rode treasure chariots to Lord Śakra while surrounded by countless millions of gods. They went before Lord Śakra and then stood to one side.
+61\. “Lord Śakra also thought of the remaining gods of the Trāyastriṃśa Heaven. Those remaining gods then thought, ‘Lord Śakra is thinking of me now! We should quickly get ready!’ They then ordered those to their right and left to equip themselves with weapons. They rode treasure chariots to Lord Śakra while surrounded by countless millions of gods. They went before Lord Śakra and then stood to one side.
 {:#p61}
 
-62\. “Lord Śakra also thought of the Viśvakarma yakṣa spirits. Those Viśvakarma yakṣa spirits then thought, ‘Lord Śakra is thinking of me now! We should quickly get ready!’ They ordered those to their right and left to equip themselves with weapons. They rode treasure chariots to Lord Śakra while surrounded by countless thousands of yakṣas. They went before Lord Śakra and then stood [to one side].
+62\. “Lord Śakra also thought of the Viśvakarma yakṣa spirits. Those Viśvakarma yakṣa spirits then thought, ‘Lord Śakra is thinking of me now! We should quickly get ready!’ They then ordered those to their right and left to equip themselves with weapons. They rode treasure chariots to Lord Śakra while surrounded by countless thousands of yakṣas. They went before Lord Śakra and then stood [to one side].
 {:#p62}
 
 63\. “Lord Śakra also thought of Nāga King Supratiṣṭhita. Nāga King Supratiṣṭhita then thought, ‘Lord Śakra is thinking of me now! I should go now.’ He then went to stand before Lord Śakra.
@@ -336,7 +336,7 @@ Don’t injure those two birds!’
 65\. “They were equipped with spears, swords, pikes, bows and arrows, axes, hatchets, spinning discs, and snares. Their weapons and armor were made of the seven treasures. When they hit the asuras with their sharp swords, they only touched the asuras without injuring them.
 {:#p65}
 
-66\. “The host of asuras were armed with swords, pikes, bows and arrows, axes, hatchets, spinning discs, and snares made of the seven treasures. When they hit the gods with their sharp swords, they only touched the gods without injuring them. Thus, the gods and asuras of the desire realm fight with each other. Desire is the cause of it.”
+66\. “The host of asuras were armed with [spears,] swords, pikes, bows and arrows, axes, hatchets, spinning discs, and snares made of the seven treasures. When they hit the gods with their sharp swords, they only touched the gods without injuring them. Thus, the gods and asuras of the desire realm fight with each other. Desire is the cause of it.”
 {:#p66}
 
 ---
@@ -344,7 +344,7 @@ Don’t injure those two birds!’
 ### Notes
 
 1. {:#n1}This is Chapter 10 of <em>sūtra</em> no. 30 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0141a21" target="_blank">T1.1.141a21-4a12</a>). [\[back\]](#ref1)
-2. {:#n2}<em>\*Prahata</em>. C. 捶打. His name is here translated to mean “to beat” or “strike” (e.g. with a fist). I believe this is same asura name that was transliterated in Chapter 6 as C. 波羅呵. Reading his name as equivalent to S. \*Prahata would make sense of both. [\[back\]](#ref2)
+2. {:#n2}<em>\*Prahata</em>. C. 捶打. His name is here translated to mean “to beat” or “strike” (e.g. with a fist). I believe this is the same asura name that was transliterated in Chapter 6 as C. 波羅呵. Reading his name as equivalent to S. \*Prahata would make sense of both. [\[back\]](#ref2)
 
 ---
 
