--- a/01_agama/dirgha/DA_30-11.md
+++ b/01_agama/dirgha/DA_30-11.md
@@ -77,7 +77,7 @@ next: DA_30-12.html
 20\. The Buddha told the monks, “What is the eon of plague? In that time, the world’s people cultivate the correct Dharma, have right view, don’t have deluded views, and perfect the ten good deeds. A yakṣa spirit comes from another world, and the yakṣa spirits in this world are reckless and lustful, so they can’t protect the people here. The yakṣa spirit from another world then attacks and disturbs this world’s people. It hits, whips, and steals their vitality. Disturbing people’s minds, it drives and threatens them as it leads them away.
 {:#p20}
 
-21\. “It’s like when a king orders his generals to defend the country, and bandits come from another direction to attack. Those reckless people attack country’s villages. This is likewise. A yakṣa spirit from another world captures the people here by hitting and whipping them. It steals their vitality, driving and threatening them as it leads them away.”
+21\. “It’s like when a king orders his generals to defend the country, and bandits come from another direction to attack. Those reckless people attack the country’s villages. This is likewise. A yakṣa spirit from another world captures the people here by hitting and whipping them. It steals their vitality, driving and threatening them as it leads them away.”
 {:#p21}
 
 22\. The Buddha told the monks, “Even if the yakṣa spirits of this world aren’t reckless and lustful, the yakṣa that comes from another world is powerful. The yakṣas of this world are afraid of it and run away. That great yakṣa spirit then attacks and disturbs people. It hits and whips them, stealing their vitality. It then kills them and leaves.
