--- a/01_agama/dirgha/DA_20.md
+++ b/01_agama/dirgha/DA_20.md
@@ -23,7 +23,7 @@ next: DA_21.html
 4\. The priest Puṣkarasārin heard: “The ascetic Gautama of the Śākya clan, who had left home and achieved awakening, has arrived at the Kośala priest village of Icchānaṅgala and stopped to rest in a citron grove. He’s accompanied by a great assembly of 1,250 monks and possesses a great reputation that’s heard throughout the world: ‘He’s a Tathāgata, an Arhat, and a Completely Awakened One who has perfected the ten epithets. Among gods, worldly men, and demons, whether they’re Māra and the gods or ascetics and priests, he’s self-realized and teaches the Dharma for others. It’s good in the beginning, middle, and end, complete in content and expression, and purifies the religious life.’”
 {:#p4}
 
-5\. [Puṣkarasārin said:] “Since he’s a realized person, I should go and meet him! Now, I’d like to examine that ascetic Gautama to be certain he has the 32 signs. His name is heard everywhere, but is what they say about him true? Is there some way I could see the Buddha’s signs?’
+5\. [Puṣkarasārin said:] “Since he’s a realized person, I should go and meet him! Now, I’d like to examine that ascetic Gautama to be certain he has the 32 signs. His name is heard everywhere, but is what they say about him true? Is there some way I could see the Buddha’s signs?”
 {:#p5}
 
 6\. Again, he thought, “Now, my disciple Ambāṣṭha is descended from seven generations of fathers and mothers who were genuine [priests], so he’s not slighted by others. He has mastered the three Vedas and can discern all the various kinds of scriptures. He’s also skilled in the techniques of [recognizing] the great man’s signs and [performing] sacrifices and rituals. I can just send this man to examine the Buddha; he’ll recognize if he possesses the signs or not.”
@@ -204,7 +204,7 @@ The Buddha told the student, “Listen closely, listen closely! Consider it well
 
 He replied, “Very well. I’d be glad to hear it.”
 
-47\. The Buddha told the student, “If the Tathāgata arises in the world who is an Arhat, Completely Awakened One, Accomplished in Insight and Conduct, Well Gone, Understander of the World, Unsurpassed Man, Trainer of Men, Teacher to Gods and People, Buddha, and Bhagavān, he alone is awakened and self-realized among all the gods, and worldly people, whether ascetics and priests, or the gods, Māra, and King Brahmā. He explains the teaching for people that’s good in the beginning, good in the middle, and good in the end. It’s content and expression are complete and reveal the pure practice.
+47\. The Buddha told the student, “If the Tathāgata arises in the world who is an Arhat, Completely Awakened One, Accomplished in Insight and Conduct, Well Gone, Understander of the World, Unsurpassed Man, Trainer of Men, Teacher to Gods and People, Buddha, and Bhagavān, he alone is awakened and self-realized among all the gods, and worldly people, whether ascetics and priests, or the gods, Māra, and King Brahmā. He explains the teaching for people that’s good in the beginning, good in the middle, and good in the end. Its content and expression are complete and reveal the pure practice.
 {:#p47}
 
 48\. “Suppose a householder, a householder’s son, or someone from the other castes hears the right teaching, and they believe it. With that belief, they think, ‘Now, I live at home bound to my wife and children. I’m not able to purely cultivate the religious life. I would rather shave my hair, put on the three Dharma robes, and leave home to cultivate the path.’ At some other time, they renounce home and property, abandon their friends and family, shave their hair, put on the three Dharma robes, and leave home to cultivate the path. They live with renunciants who equally abandon ornaments, and their practice of precepts is complete.
@@ -228,7 +228,7 @@ He replied, “Very well. I’d be glad to hear it.”
 54\. “They abandon harsh speech, which is words that are crude or fierce, that delight in troubling other people, and that cause the bonds of resentment to arise. They abandon such words. Their words are gentle and don’t cause harm. They’re beneficial to many people. The community has respect and affection for them, gladly listening to their words. This is not speaking harshly.
 {:#p54}
 
-55\. They abandon frivolous speech. Their words are aware of the occasion, sincere, and accord with the teaching. They settle disputes according to the discipline. When there’s reason to speak, their speech doesn’t miss the point. This is abandoning frivolous speech.
+55\. “They abandon frivolous speech. Their words are aware of the occasion, sincere, and accord with the teaching. They settle disputes according to the discipline. When there’s reason to speak, their speech doesn’t miss the point. This is abandoning frivolous speech.
 {:#p55}
 
 56\. “They abandon drinking alcohol, part with carelessness, and aren’t attached to fragrances, flowers, and jewelry. They don’t watch or listen to songs and dances. They don’t sit on high seats, eat at the wrong time, or accept and use gold, silver, or the seven treasures. They don’t marry wives or concubines and don’t take care of servants, workers, elephants, horses, carts, cattle, chickens, dogs, pigs, sheep, farmland, or pleasure parks. Nor do they fool other people with fraudulent weights and measures and then carry away the profit in their hands. They don’t put others in debt to trap them. This is not being fraudulent.
@@ -266,7 +266,7 @@ He replied, “Very well. I’d be glad to hear it.”
 66\. “Student, take the example of other ascetics and priests who eat another’s faithful alms and still pursue their livelihoods on other ways. They serve as messengers for kings, royal officials, priests, or householders, traveling from here to there and there to here. They take messages from here and deliver them there and take messages from there and deliver them here. They might do this personally or instruct others to do it. No one who enters my teaching does such things.
 {:#p66}
 
-67\. “Student, take the example of other ascetics and priests who eat another’s faithful alms but only practice battle tactics and martial arts. They might practice wielding melee weapons or bow and arrow. They might fight animals like chickens, dogs, pigs, sheep, elephants, horses, cattle, and camels. They might fight with men and women and make many sounds with conchs, drums, while singing and dancing. They might climb poles, perform handstands, and practice various acrobatics. No one who enters my teaching does such things.
+67\. “Student, take the example of other ascetics and priests who eat another’s faithful alms but only practice battle tactics and martial arts. They might practice wielding melee weapons or bows and arrows. They might fight animals like chickens, dogs, pigs, sheep, elephants, horses, cattle, and camels. They might fight with men and women and make many sounds with conchs, drums, while singing and dancing. They might climb poles, perform handstands, and practice various acrobatics. No one who enters my teaching does such things.
 {:#p67}
 
 68\. “Student, take the example of other ascetics and priests who eat another’s faithful alms and practice teachings that obstruct the path. They make their living with wrong livelihoods such as telling the signs of men and women’s good and bad fortune, their beauty and ugliness, or the signs of livestock. They do this seeking profit. No one who enters my teaching does such things.
@@ -328,10 +328,10 @@ He replied, “Very well. I’d be glad to hear it.”
 86\. “It’s also like someone who takes on debt to make his living and makes a large profit from it. He returns the original sum to its owner, and the remainder is enough for himself. He thinks to himself, ‘When I took this loan, I feared it wouldn’t go as I wanted. Now that I’ve made this profit, I returned the original sum to its owner, and the remainder is enough for myself. I’m so happy I won’t return to sorrow and fear.’
 {:#p86}
 
-87\. “It’s like someone who was ill for a long time and recovers from that illness. They digest what they eat and drink, and their complexion and strength is restored. They think, ‘I was ill before, but now I’ve recovered. I digest what I eat and drink, and my complexion and strength is restored. I’m so happy I won’t return to sorrow and fear.’
+87\. “It’s like someone who was ill for a long time and recovers from that illness. They digest what they eat and drink, and their complexion and strength are restored. They think, ‘I was ill before, but now I’ve recovered. I digest what I eat and drink, and my complexion and strength are restored. I’m so happy I won’t return to sorrow and fear.’
 {:#p87}
 
-88\. “It’s also like someone who’s been imprisoned for a long time, and they are safely released. They think to themselves, ‘I was taken and imprisoned before, but now I’ve been released! I’ll so happy I won’t return to sorrow and fear.’
+88\. “It’s also like someone who’s been imprisoned for a long time, and they are safely released. They think to themselves, ‘I was taken and imprisoned before, but now I’ve been released! I’m so happy I won’t return to sorrow and fear.’
 {:#p88}
 
 89\. “It’s also like someone who carries many treasures across a wasteland, and they safely make it across without encountering bandits. They think to themselves, ‘I’ve brought these treasures across that dangerous region. I’m so happy I won’t return to sorrow and fear.’ Their mind is peaceful and happy.
@@ -410,7 +410,7 @@ He replied, “Very well. I’d be glad to hear it.”
 112\. “Student, a monk contemplates mind as the supporting basis of this body. It goes to that created body in the same way. This is the monk’s second excellent attainment. Why is that? These things come from diligence, mindfulness, and being undisturbed, which are gained from happily living in a quiet place.
 {:#p112}
 
-113\. “With a concentrated mind, they’re pure, undefiled, gentle, and disciplined, and they stand unmoved. Unified in mind, they cultivate the realization of the knowledge of miraculous abilities. They’re can work various miracles. They miraculously make one body into countless bodies and combines countless bodies into one. They can travel by flying. Stone walls are no obstacle to them. They travel through the sky like a bird and walk on water like the earth. Their body smokes and blazes like a large bonfire. They touch the sun and moon with their hand and stand as high as the Brahma Heaven.
+113\. “With a concentrated mind, they’re pure, undefiled, gentle, and disciplined, and they stand unmoved. Unified in mind, they cultivate the realization of the knowledge of miraculous abilities. They can work various miracles. They miraculously make one body into countless bodies and combines countless bodies into one. They can travel by flying. Stone walls are no obstacle to them. They travel through the sky like a bird and walk on water like the earth. Their body smokes and blazes like a large bonfire. They touch the sun and moon with their hand and stand as high as the Brahma Heaven.
 {:#p113}
 
 114\. “They’re like a potter who’s good at mixing wet clay and shaping it into whatever useful container he wants. They’re also like a carpenter that’s good at handling wood, making whatever useful thing he wants from it. They’re also like an ivory worker who’s good at handling elephant tusks, or a goldsmith who’s good at refining pure gold. They make whatever useful things that they want.
@@ -451,13 +451,13 @@ He replied, “Very well. I’d be glad to hear it.”
 125\. “‘This person’s physical conduct was bad, their verbal conduct was bad, and their mental conduct was bad. They slandered the noble ones and believed wrong views. When their body broke up and their life ended, they fell to the three bad destinies.’ ‘This person’s physical conduct was good, their verbal conduct was good, and their mental conduct was good. They didn’t slander the noble ones and believed correct views. When their body broke up and their life ended, they were born in heaven or among humans.’ With their purified heavenly eye, they see sentient beings leaving and arriving in the five destinies according to their actions.
 {:#p125}
 
-126\. “It’s like a high, broad, and level area inside a city. At the head of a four-way intersection, a large and tall tower in built there from which someone with clear vision can keep watch. They see people traveling east, west, south, and north as they go. They can see all of them.
+126\. “It’s like a high, broad, and level area inside a city. At the head of a four-way intersection, a large and tall tower is built there from which someone with clear vision can keep watch. They see people traveling east, west, south, and north as they go. They can see all of them.
 {:#p126}
 
 127\. “Student, a monk is thus. With a concentrated mind, they’re pure and stand unmoved. They can realize the knowledge of seeing birth and death. With their purified heavenly eye, they fully see sentient beings that are good and bad being born according to their actions, going and arriving in the five destinies. He sees all of them.
 {:#p127}
 
-128\. This is the monk’s attainment of the second insight. Eliminating their ignorance, wise insight arises. The darkness is dispelled, and the light of wisdom shines. This is the realization of the insight into seeing sentient beings being born and dying. Why is that? These things come from diligence, mindfulness, and being undisturbed, which are gained from happily living in a quiet place.
+128\. “This is the monk’s attainment of the second insight. Eliminating their ignorance, wise insight arises. The darkness is dispelled, and the light of wisdom shines. This is the realization of the insight into seeing sentient beings being born and dying. Why is that? These things come from diligence, mindfulness, and being undisturbed, which are gained from happily living in a quiet place.
 {:#p128}
 
 129\. “With a concentrated mind, they’re pure, undefiled, gentle, and disciplined, and they stand unmoved. Unified in mind, they cultivate realization of the knowledge of having no contaminants. They truly know the noble truth of suffering … They truly know the contaminants, the formation of the contaminants, the ending of the contaminants, and the path that leads to the end of the contaminants.[\[18\]](#n18){:#ref18} They thus know and see the contaminants of desire, existence, and ignorance. Their mind is freed, and their knowledge is freed: ‘My births and deaths have been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to a later existence.’
@@ -466,7 +466,7 @@ He replied, “Very well. I’d be glad to hear it.”
 130\. “It’s like wood, stones, fish, turtles, and other water-born things in a clear stream flowing from east to west. A person with eyes clearly sees them: ‘That’s wood and stones … that’s fish and turtles.’
 {:#p130}
 
-131\. “Student, a monk is thus. With a concentrated mind, they’re pure and stand unmoved. They realize the knowledge of having no contaminants ... ‘I won’t be subject to a later existence.’
+131\. “Student, a monk is thus. With a concentrated mind, they’re pure and stand unmoved. They realize the knowledge of having no contaminants … ‘I won’t be subject to a later existence.’
 {:#p131}
 
 132\. “This is the monk’s attainment of the third insight. Eliminating their ignorance, wise insight arises. The darkness is dispelled, and the light of wisdom shines. This is the insight of the knowledge of having no contaminants. Why is that? These things come from diligence, mindfulness, and being undisturbed, which are gained from happily living in a quiet place.
@@ -509,7 +509,7 @@ He answered, “No.”
 
 He answered, “No.”
 
-142\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds and grows from the source of Hell.
+142\. The Buddha told the student, “Your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
 {:#p142}
 
 #### The Ancient Priests
@@ -537,7 +537,7 @@ He answered, “No.”
 147\. “Student, your own pettiness makes you unaware of what’s true or false, yet you slander and belittle the Śākyans while your own lineage is rooted in misdeeds that grow the source of Hell.
 {:#p147}
 
-148\. “How is it, student? Just as those great sages and priests of antiquity praised and commended reciting the hymns, the priests today commend and recitation of Aṣṭaka and the others. They hand down their teachings and teach them to others hoping to be born in the Brahma Heaven, but it’s impossible.
+148\. “How is it, student? Just as those great sages and priests of antiquity praised and commended reciting the hymns, the priests today commend the recitation of Aṣṭaka and the others. They hand down their teachings and teach them to others hoping to be born in the Brahma Heaven, but it’s impossible.
 {:#p148}
 
 149\. “Student, it’s like when King Prasenajit holds a meeting with others. He might be meeting with kings, officials, priests, or householders. A low-ranking person hears them, goes into Śrāvastī, and tells the people they meet, ‘King Prasenajit had this to say.’ How is it, student? Would the king have a meeting with such a person?”
@@ -667,7 +667,7 @@ His teacher said, “I had an intelligent disciple to send as my messenger, but 
 
 ### Notes
 
-1. {:#n1}This is <em>sūtra</em> no. 20 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0082a06" target="_blank">T1.1.82a6-8b7</a>). Direct parallels include <a href="https://suttacentral.net/dn3" target="_blank">DN 3</a> and an alternate Chinese translation (<a href="https://cbetaonline.dila.edu.tw/zh/T0020_001" target="_blank">T20). [\[back\]](#ref1)
+1. {:#n1}This is <em>sūtra</em> no. 20 of the <cite>Dīrgha Āgama</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T01n0001_p0082a06" target="_blank">T1.1.82a6-8b7</a>). Direct parallels include <a href="https://suttacentral.net/dn3" target="_blank">DN 3</a> and an alternate Chinese translation (<a href="https://cbetaonline.dila.edu.tw/zh/T0020_001" target="_blank">T20</a>). [\[back\]](#ref1)
 2. {:#n2}*Icchānaṅgala*. While I’ve not found a S. attestation, the Chinese transliteration matches the Pali closely, so I’ve adopted it.
 Citron grove. In Pali, the grove is named after the town, but in Chinese it’s called Iccha[ka], the name of the citron, which is a shrub that was the progenitor of later citrus fruits like lemons and limes. [\[back\]](#ref2)
 3. {:#n3}*Utkaṭa*. C. 郁伽羅 (MCh. ɪuk-k’ie-la = *Ukkala), P. Utkaṭṭhā. Utkaṭa is the S. attestation, but the Chinese suggests “Utkala.” [\[back\]](#ref3)
@@ -680,7 +680,7 @@ Citron grove. In Pali, the grove is named after the town, but in Chinese it’s 
 8. {:#n8}*you*. The Buddha again addresses him as an inferior. [\[back\]](#ref8)
 9. {:#n9}*Svararāja*. C. 聲王. Lit. “King of Voices.” It’s unclear exactly what the S. would be for this name, other than this straightforward back-translation that appears in other mythical Buddhist names. Both here and in the Theravāda account, Ambāṣṭha’s clan name appears to be a sarcasm. The ill-spoken youth gets the name “King of Voices,” which is presumably a joke that he is an embarrassment to his clan. In the Theravāda version, the joke is instead to name him “Black Way” (Kaṇhāyana), referring to Ambaṭṭha’s insults about ascetics and the story the Buddha is about to tell him. [\[back\]](#ref9)
 10. {:#n10}*Ikṣvāku*. C. 聲摩 (MCh. ʃɪɛŋ-mua = *[Ik]śeñ-ma?). P. Okkāka, S. Ikṣvāku. The Chinese indicates that his name was different in the language of the Dīrgha Āgama and in several other Chinese translations from this period. The king’s name appears as 懿摩, 懿師摩, 伊摩, and 鬱摩 in other texts, indicated that it was akin to “Ikṣvama.” I’ve adopted the S. equivalent. [\[back\]](#ref10)
-11. {:#n11}*Ulkāmukha … Hastikaśīrṣa … Karakaṇḍa … Opura*. C. 面光, 象食, 路指, 莊嚴; P. Okkāmukha, Karakaṇḍa, Hatthinika, and Sinisūra; S. Ulkāmukha, Hastikasirsa, Opura, Karakaṇḍa. The Chinese names in the list appear to include Ulkāmukha (面光) and Hastikasirsa (象食), but the other two are obscure. I’ve adopted the S. names. [\[back\]](#ref11)
+11. {:#n11}*Ulkāmukha … Hastikaśīrṣa … Karakaṇḍa … Opura*. C. 面光, 象食, 路指, 莊嚴; P. Okkāmukha, Karakaṇḍa, Hatthinika, Sinisūra; S. Ulkāmukha, Hastikasirsa, Opura, Karakaṇḍa. The Chinese names in the list appear to include Ulkāmukha (面光) and Hastikasirsa (象食), but the other two are obscure. I’ve adopted the S. names. [\[back\]](#ref11)
 12. {:#n12}*teak tree grove*. C. 直樹林. The Chinese translates śaka literally as “straight” (直) to capture the wordplay that will happen shortly. [\[back\]](#ref12)
 13. {:#n13}Some editions of the Chinese have an interlineal note explaining the play on words: “Śākya means ‘staying in the straight tree grove.’ Therefore, they are called Śākya. Śākya also means ‘straight.’” [\[back\]](#ref13)
 14. {:#n14}*a servant*. The Chinese literally reads “green clothes” (靑衣) but this was the fashion of servants and common people in China at the time, so the term served as a colloquialism for servants and workers.\\
@@ -699,7 +699,7 @@ Citron grove. In Pali, the grove is named after the town, but in Chinese it’s 
 *Kāśyapa*. C. 迦葉 (MCh. kie-ʃɪɛp = \*Kiṣap[a]), P. Kassapa, S. Kāśyapa. This was a well-known transliteration.\\
 *Aruna*. C. 阿樓那 (MCh. a-ləu-na = \*Aruṇa). This is a well-known transliteration, but it doesn’t have a parallel in the Pali.\\
 *Gautama*. C. 瞿曇 (MCh. gɪuo-dəm = \*Gotam[a]). Another known transliteration, but Gotama isn’t found in the Pali parallel.\\
-*[Suyiva]*. C. 首夷婆 (MCh. ʃɪəu-yii-bua = \*Ṣuyiva). 翻梵語 (T2130.985c6) has an entry with this transliteration in a compound. It glosses it to mean “pure speech,” but I haven't ascertained an Indic equivalent that matches it's syllables.\\
+*[Suyiva]*. C. 首夷婆 (MCh. ʃɪəu-yii-bua = \*Ṣuyiva). 翻梵語 (T2130.985c6) has an entry with this transliteration in a compound. It glosses it to mean “pure speech,” but I haven’t ascertained an Indic equivalent that matches its syllables.\\
 *Sundara*. C. 損陀羅 (MCh. suən-da-la = \*Sundara). There’s no parallel in Pali, but it’s a known name in S. for a former king. [\[back\]](#ref19)
 
 ---
