--- a/01_agama/dirgha/DA_30-6.md
+++ b/01_agama/dirgha/DA_30-6.md
@@ -51,7 +51,7 @@ next: DA_30-7.html
 13\. “North of that discussion hall, there’s a forest park called Nandana, which is 10,000 yojanas across and also like Śāla Park.
 {:#p13}
 
-14\. “Between Śāla Park and Most Marvelous Park grows a Pārijāta tree, which covers are area of seven yojanas and stands a hundred yojanas tall. It’s limbs and leaves spread out in all four directions to cover fifty yojanas. That tree has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+14\. “Between Śāla Park and Most Marvelous Park grows a Pārijāta tree, which covers are area of seven yojanas and stands a hundred yojanas tall. Its limbs and leaves spread out in all four directions to cover fifty yojanas. That tree has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p14}
 
 15\. “Between Śālmalī Park and Nandana Park, there’s Lake Upananda. Its water is clear and unpolluted. It’s ringed by seven stepped embankments made of treasures, and it has seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures.
