--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -80,7 +80,7 @@ next: DA_22.html
 22\. “‘There are other ascetics and priests who eat the faithful alms of others and pursue a messenger’s livelihood. Whether it’s for kings, the king’s ministers, priests, or gentlemen, they relay their messages. They travel from here to there and there to here. They take a message here and deliver it there or take a message there and deliver it here. They might do this themselves or instruct others to do it. The ascetic Gautama doesn’t do such things.’
 {:#p22}
 
-23\. “‘There are other ascetics and priests who eat the faithful alms of others and just study military strategy and combat. They might train in the use of swords and staves or the bow and arrow. They might fight animals like chickens, dogs, pigs, sheep, elephants, horses, cattle, and camels or fight men and women. They might make different kinds of music using horns and drums, singing and dancing. They might climb poles, perform handstands, and practice various acrobatics. The ascetic Gautama doesn’t do such things.’
+23\. “‘There are other ascetics and priests who eat the faithful alms of others and just study military strategy and combat. They might train in the use of swords and staves or bows and arrows. They might fight animals like chickens, dogs, pigs, sheep, elephants, horses, cattle, and camels or fight men and women. They might make different kinds of music using horns and drums, singing and dancing. They might climb poles, perform handstands, and practice various acrobatics. The ascetic Gautama doesn’t do such things.’
 {:#p23}
 
 24\. “‘There are other ascetics and priests who eat the faithful alms of others and practice teachings that obstruct the path. They make their living with wrong livelihoods such as telling the signs of men and women’s good and bad fortune, their beauty and ugliness, or the signs of livestock. They do this seeking to profit by it. The ascetic Gautama doesn’t do such things.’
@@ -98,15 +98,15 @@ next: DA_22.html
 28\. “‘There are other ascetics and priests who eat the faithful alms of others and practice teachings that obstruct the path. They make their living with wrong livelihoods. They make predictions based on the heavens and seasons: “It will rain … it won’t rain … the harvest will be bountiful … the harvest will be poor … many people will fall ill … few will be ill … there’ll be terrible [events] … there’ll be peace.” They might discuss earthquakes, comets, solar and lunar eclipses, stellar occultations and non-occultations and where they will happen, and they’re able to predict them. The ascetic Gautama doesn’t do such things.’
 {:#p28}
 
-29\. “‘There are other ascetics and priests who eat the faithful alms of others and practice teachings that obstruct the path, making their living from wrong livelihoods. They might say, “This country will win; that country is not their equal … that country will win; this country is not their equal.” They divine the fortune and misfortune and discuss the flourishing and demise [of different countries]. The ascetic Gautama doesn’t do such things.’
+29\. “‘There are other ascetics and priests who eat the faithful alms of others and practice teachings that obstruct the path, making their living from wrong livelihoods. They might say, “This country will win; that country is not their equal … that country will win; this country is not their equal.” They divine their fortune and misfortune and discuss the flourishing and demise [of different countries]. The ascetic Gautama doesn’t do such things.’
 {:#p29}
 
-30\. “Monks, these are the minor matters of observing the precepts for which ordinary, uneducated people praise the Buddha.
+30\. “Monks, these are the minor matters of observing the precepts for which ordinary, uneducated people praise the Buddha.”
 {:#p30}
 
 #### Views about Past Eons
 
-31\. The Buddha told the monks, “Moreover, there’s another teaching that illuminates what’s profound, subtle, and great, but it’s only the noble disciples who praise this teaching of the Tathāgata’s. What is that profound, subtle, great, and illuminating teaching for which the noble disciples praise the Tathāgata?
+31\. The Buddha told the monks, “Moreover, there’s another teaching that illuminates what’s profound, subtle, and great, but it’s only the noble disciples who praise this teaching of the Tathāgata. What is that profound, subtle, great, and illuminating teaching for which the noble disciples praise the Tathāgata?
 {:#p31}
 
 32\. “Ascetics and priests make diverse and countless statements as they like about past and future eons, and they all enter 62 views by doing so. Making these diverse and countless statements about past and future eons, none of them can go beyond these 62 views.
@@ -129,16 +129,16 @@ next: DA_22.html
 37\. “What are the reasons those ascetics and priests create eternalist theories about past eons, saying that self and the world always exist, and they don’t go beyond these four views that they enter?
 {:#p37}
 
-38\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they remember 20 eons of [world] formation and destruction. They say, ‘Self and the world are eternal. This is true, the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I remembered 20 eons of [world] formation and destruction. During that time, sentient beings neither increased nor decreased. They always came together and didn’t scatter. By this, I know: “Self and the world are eternal. This is true; the rest is false.”’ This is the first view. As a result of this assertion about past eons that self and world are eternal, ascetics and priests don’t go beyond these four views.
+38\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they remember 20 eons of [world] formation and destruction. They say, ‘Self and the world are eternal. This is true, the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I remembered 20 eons of [world] formation and destruction. During that time, sentient beings neither increased nor decreased. They always came together and didn’t scatter. By this, I know: “Self and the world are eternal. This is true; the rest is false.”’ This is the first view. As a result of this assertion about past eons that self and the world are eternal, ascetics and priests don’t go beyond these four views.
 {:#p38}
 
-39\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they remember 40 eons of [world] formation and destruction. They say, ‘Self and the world are eternal. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I remembered 40 eons of [world] formation and destruction. During that time, sentient beings neither increased nor decreased. They always came together and didn’t scatter. By this, I know: “Self and the world are eternal. This is true; the rest is false.”’ This is the second view. As a result of this assertion about past eons that self and world are eternal, ascetics and priests don’t go beyond these four views.
+39\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they remember 40 eons of [world] formation and destruction. They say, ‘Self and the world are eternal. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I remembered 40 eons of [world] formation and destruction. During that time, sentient beings neither increased nor decreased. They always came together and didn’t scatter. By this, I know: “Self and the world are eternal. This is true; the rest is false.”’ This is the second view. As a result of this assertion about past eons that self and the world are eternal, ascetics and priests don’t go beyond these four views.
 {:#p39}
 
-40\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they remember 80 eons of [world] formation and destruction. They say, ‘Self and the world are eternal. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I remembered 80 eons of [world] formation and destruction. During that time, sentient beings neither increased nor decreased. They always came together and didn’t scatter. By this, I know: “Self and the world are eternal. This is true; the rest is false.”’ This is the third view. As a result of this assertion about past eons that self and world are eternal, ascetics and priests don’t go beyond these four views.
+40\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they remember 80 eons of [world] formation and destruction. They say, ‘Self and the world are eternal. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I remembered 80 eons of [world] formation and destruction. During that time, sentient beings neither increased nor decreased. They always came together and didn’t scatter. By this, I know: “Self and the world are eternal. This is true; the rest is false.”’ This is the third view. As a result of this assertion about past eons that self and the world are eternal, ascetics and priests don’t go beyond these four views.
 {:#p40}
 
-41\. “Some ascetics and priests possess quick intelligence and are skilled observers. Using the methods of quick intelligence and observation, they investigate the truth as they see it themselves. Using their own eloquence, they say, ‘Self and the world are eternal.’ This is the fourth view. As a result of this assertion about past eons that self and world are eternal, ascetics and priests don’t go beyond these four views.
+41\. “Some ascetics and priests possess quick intelligence and are skilled observers. Using the methods of quick intelligence and observation, they investigate the truth as they see it themselves. Using their own eloquence, they say, ‘Self and the world are eternal.’ This is the fourth view. As a result of this assertion about past eons that self and the world are eternal, ascetics and priests don’t go beyond these four views.
 {:#p41}
 
 42\. “These ascetics and priests make assertion about past eons that self and the world are eternal, and they all enter these four views. [Saying that] self and the world are eternal, they don’t go beyond these four views that they enter.
@@ -164,19 +164,19 @@ next: DA_22.html
 48\. “After this sentient being was born according to its craving and wish, there were other sentient beings whose lives, practices, and merits were exhausted. When their lives ended in the Ābhāsvara Heaven, they were reborn in that empty Brahma Heaven. The sentient being who was born there first thought, ‘Here, I am Brahma, Great Brahmā! I appeared spontaneously; it’s impossible that another created me. I know all meanings and scriptures, and I’m sovereign over a thousand worlds. I am the most honored who’s able to transform himself and who’s sublime, supreme, and the father of sentient beings. I was here first by myself, and those other sentient beings came later. I created those sentient beings who came later.’
 {:#p48}
 
-49\. “Those later sentient beings also thought, ‘He is Great Brahmā. He was able to create himself; no other could create him. He knows all meanings and scriptures, and he’s sovereign over a thousand worlds. He’s the most honored who’s able to transform himself and who’s, sublime, supreme, and the father of sentient beings. He was here first by himself, and it was later than we arrived. We sentient beings are his creations.’
+49\. “Those later sentient beings also thought, ‘He is Great Brahmā. He was able to create himself; no other could create him. He knows all meanings and scriptures, and he’s sovereign over a thousand worlds. He’s the most honored who’s able to transform himself and who’s sublime, supreme, and the father of sentient beings. He was here first by himself, and it was later that we arrived. We sentient beings are his creations.’
 {:#p49}
 
-50\. “After the lives and practices of those brahma sentient beings are exhausted, they are born in the world and gradually grow up. They shave their hair, put on the three Dharma robes, and leave home to cultivate the path. They enter a samādhi of mind and become aware of their past births as a result of that samādhi. They say, ‘That Great Brahmā was able to create himself; no other could create him. He knows all meanings and scriptures, and he’s sovereign over a thousand worlds. He’s the most honored who’s able to transform himself and who’s sublime, supreme, and the father of sentient beings. Everlasting and unchanging is that Brahmā who created us, but we are impermanent, changing, and unable to last long. Therefore, it should be known: “Self and the world are half eternal and half impermanent. This is true; the rest is false.”’ This is called the first view. As a result of creating this theory about past eons [that self and world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
+50\. “After the lives and practices of those brahma sentient beings are exhausted, they are born in the world and gradually grow up. They shave their hair, put on the three Dharma robes, and leave home to cultivate the path. They enter a samādhi of mind and become aware of their past births as a result of that samādhi. They say, ‘That Great Brahmā was able to create himself; no other could create him. He knows all meanings and scriptures, and he’s sovereign over a thousand worlds. He’s the most honored who’s able to transform himself and who’s sublime, supreme, and the father of sentient beings. Everlasting and unchanging is that Brahmā who created us, but we are impermanent, changing, and unable to last long. Therefore, it should be known: “Self and the world are half eternal and half impermanent. This is true; the rest is false.”’ This is called the first view. As a result of creating this theory about past eons [that self and the world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
 {:#p50}
 
-51\. “Some sentient beings are playful and lazy. Countless are the games with which they entertain themselves. While they enjoy their games, their bodies are exhausted, and they forget themselves. As they forget themselves, their lives end, and they are reborn in the world. They gradually grow up, shave their hair, put on the three Dharma robes, leave home, and cultivate the path. They enter a samādhi of mind through which they become aware of their past births. They say, ‘Those other sentient beings who didn’t frequently entertain themselves with games exist eternally in their abodes, everlasting unchanging. As a result of my frequent games, I came to this impermanent state that’s subject to change. Therefore, I know: “Self and the world are half eternal and half impermanent. This is true; the rest is false.”’ This is the second view. As a result of creating this theory about past eons [that self and world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
+51\. “Some sentient beings are playful and lazy. Countless are the games with which they entertain themselves. While they enjoy their games, their bodies are exhausted, and they forget themselves. As they forget themselves, their lives end, and they are reborn in the world. They gradually grow up, shave their hair, put on the three Dharma robes, leave home, and cultivate the path. They enter a samādhi of mind through which they become aware of their past births. They say, ‘Those other sentient beings who didn’t frequently entertain themselves with games exist eternally in their abodes, everlasting and unchanging. As a result of my frequent games, I came to this impermanent state that’s subject to change. Therefore, I know: “Self and the world are half eternal and half impermanent. This is true; the rest is false.”’ This is the second view. As a result of creating this theory about past eons [that self and the world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
 {:#p51}
 
-52\. “Some sentient beings forget themselves after watching each other one after the other. As a result, they’re born in the world when their lives end. They gradually grow up, shave their hair, put on the three Dharma robes, leave home, and cultivate the path. They enter a samādhi of mind through which they became aware of their past births. Then they say, ‘Those sentient beings that don’t forget themselves while watching each other one after the other are everlasting and unchanging. We frequently watched each other and forgot ourselves after doing so. As a result, we’ve come to this impermanent state that’s subject to change. Therefore, I know: “Self and the world is half eternal and half impermanent. This is true; the rest is false.”’ This is the third view. As a result of creating this theory about past eons [that self and world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
+52\. “Some sentient beings forget themselves after watching each other one after the other. As a result, they’re born in the world when their lives end. They gradually grow up, shave their hair, put on the three Dharma robes, leave home, and cultivate the path. They enter a samādhi of mind through which they become aware of their past births. Then they say, ‘Those sentient beings that don’t forget themselves while watching each other one after the other are everlasting and unchanging. We frequently watched each other and forgot ourselves after doing so. As a result, we’ve come to this impermanent state that’s subject to change. Therefore, I know: “Self and the world are half eternal and half impermanent. This is true; the rest is false.”’ This is the third view. As a result of creating this theory about past eons [that self and the world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
 {:#p52}
 
-53\. “Some ascetics and priests possess quick intelligence and are skilled observers. With their quick intelligence and observation, they use their own eloquence to say, ‘Self and the world are half eternal and half impermanent. This is true; the rest is false.’ This is the fourth view. As a result of creating this theory about past eons [that self and world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
+53\. “Some ascetics and priests possess quick intelligence and are skilled observers. With their quick intelligence and observation, they use their own eloquence to say, ‘Self and the world are half eternal and half impermanent. This is true; the rest is false.’ This is the fourth view. As a result of creating this theory about past eons [that self and the world are] half eternal and half impermanent, ascetics and priests don’t go beyond these four views.
 {:#p53}
 
 54\. “These ascetics and priests create the theory about past eons that self and the world are half eternal and half impermanent. They all enter these four views and don’t go beyond them.
@@ -196,16 +196,16 @@ next: DA_22.html
 58\. “Ascetics and priests create this theory about past eons: ‘Self and the world are limited and limitless.’ As a result of creating this theory about past eons that self and the world are limited and limitless, those ascetics and priests don’t go beyond these four views.
 {:#p58}
 
-59\. “Some ascetics and priests use various methods to enter a samādhi mind through which they examine the world and perceive that it has limits. They then say, ‘This world has limits. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I examined the world and its limits. Therefore, I know: “The world has limits. This is true; the rest is false.”’ This is the first view. As a result of creating this theory about past eons that self and world have limits, ascetics and priests don’t go beyond these four views.
+59\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world and perceive that it has limits. They then say, ‘This world has limits. This is true; the rest is false. Why is that? Using various methods, I entered a samādhi of mind through which I examined the world and its limits. Therefore, I know: “The world has limits. This is true; the rest is false.”’ This is the first view. As a result of creating this theory about past eons that self and the world have limits, ascetics and priests don’t go beyond these four views.
 {:#p59}
 
-60\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world and perceive that it’s limitlessness. They then say, ‘This world is limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world and its limitlessness. Therefore, I know: “This world is limitless. This is true; the rest is false.”’ This is the second view. As a result of creating this theory about past eons that self and world are limitless, ascetics and priests don’t go beyond these four views.
+60\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world and perceive that it’s limitlessness. They then say, ‘This world is limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world and its limitlessness. Therefore, I know: “This world is limitless. This is true; the rest is false.”’ This is the second view. As a result of creating this theory about past eons that self and the world are limitless, ascetics and priests don’t go beyond these four views.
 {:#p60}
 
-61\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world. They take the upward direction to have a limit and the four directions to be limitless. They then say, ‘This world has a limit, and it’s limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world. I observed that the upward direction has a limit and that the four directions are limitless. Therefore, I know: “The world has a limit, and it’s limitless. This is true; the rest is false.”’ This is the third view. As a result of creating this theory about past eons that self and world are limited and limitless, ascetics and priests don’t go beyond these four views.
+61\. “Some ascetics and priests use various methods to enter a samādhi of mind through which they examine the world. They take the upward direction to have a limit and the four directions to be limitless. They then say, ‘This world has a limit, and it’s limitless. This is true; the rest is false. Why is that? Using various methods, I’ve entered a samādhi of mind through which I examined the world. I observed that the upward direction has a limit and that the four directions are limitless. Therefore, I know: “The world has a limit, and it’s limitless. This is true; the rest is false.”’ This is the third view. As a result of creating this theory about past eons that self and the world are limited and limitless, ascetics and priests don’t go beyond these four views.
 {:#p61}
 
-62\. “Some ascetics and priests possess quick intelligence and are skilled observers. With their quick intelligence and observation, they use their own eloquence to say, ‘Self and the world are neither limited nor limitless. This is true; the rest is false.’ This is the fourth view. As a result of creating this theory about past eons that self and world are neither limited nor limitless, ascetics and priests don’t go beyond these four views.
+62\. “Some ascetics and priests possess quick intelligence and are skilled observers. With their quick intelligence and observation, they use their own eloquence to say, ‘Self and the world are neither limited nor limitless. This is true; the rest is false.’ This is the fourth view. As a result of creating this theory about past eons that self and the world are neither limited nor limitless, ascetics and priests don’t go beyond these four views.
 {:#p62}
 
 63\. “These ascetics and priests create the theory regarding past eons that self and the world are limited and limitless. They all enter these four views and don’t go beyond them.
@@ -263,16 +263,16 @@ next: DA_22.html
 79\. “Some ascetics and priests say about past eons that this world arose without cause, and they all enter two views. As a result of saying about past eons that this world arose without cause, they don’t go beyond these two views.
 {:#p79}
 
-80\. What are the reasons those ascetics and priests say about past eons that [the world] exists without cause and don’t go beyond these two views?
+80\. “What are the reasons those ascetics and priests say about past eons that [the world] exists without cause and don’t go beyond these two views?
 {:#p80}
 
 81\. “Some sentient beings lack conception or perception. If those sentient beings give rise to concepts, then they’re reborn in the world when their lives end. They gradually grow up, shave their hair, put on the three Dharma robes, leave home, and cultivate the path. They enter a samādhi of mind through which they become aware of their past births. They say, ‘I didn’t exist in the past, but now suddenly I exist. This world didn’t exist before, but now it does. This is true; the rest is false.’ This is the first view. As a result of saying about past eons that [the world] exists without cause, ascetics and priests don’t go beyond these two views.
 {:#p81}
 
-82\. “Some ascetics and priests possess quick intelligence and are skilled observers. With their quick intelligence and observation, they use their own eloquence to say: ‘This world exists without a cause. This is true; the rest is false.’ This is the second view. As a result of saying about past eons that [the world] exists without cause, ascetics and priests don’t go beyond these two views.
+82\. “Some ascetics and priests possess quick intelligence and are skilled observers. With their quick intelligence and observation, they use their own eloquence to say: ‘This world exists without cause. This is true; the rest is false.’ This is the second view. As a result of saying about past eons that [the world] exists without cause, ascetics and priests don’t go beyond these two views.
 {:#p82}
 
-83\. “These ascetics and priests [say] about past eons [that the world] exists without a cause. They all enter these two views and don’t go beyond them. There’s only the Tathāgata that knows this … same as before.
+83\. “These ascetics and priests [say] about past eons [that the world] exists without cause. They all enter these two views and don’t go beyond them. There’s only the Tathāgata that knows this … same as before.
 {:#p83}
 
 84\. “Ascetics and priests make diverse and countless statements as they like about past eons, and they all enter these 18 views. Making these diverse and countless statements that they make as they like about past eons, none of them go beyond these 18 views. There’s only the Tathāgata that knows this … same as before.
@@ -522,7 +522,7 @@ next: DA_22.html
 3. {:#n3}The Chinese translates his name as “Good Thought” (善念). The alternate translation (T 21) transliterates his name as “Supi” (須卑) and a Tibetan translation bears a similar meaning to S. *Supriya (P. Suppiya). [\[back\]](#ref3)
 4. {:#n4}The Chinese is obscure, but it seems to correspond to descriptions checkered game boards in Theravāda commentaries (DA. I. p.85), which are termed “aṭṭhapadaṃ dasapadaṃ”. These Pali terms refer to game boards with eight and ten squares to a side. [\[back\]](#ref4)
 5. {:#n5}Nothingness. S. ākiṃcanya, P. ākiñcañña. The Chinese translation (不用處) literally means “abode of no function,” presumably meaning that no phenomena exists there to produce any activity. [\[back\]](#ref5)
-6. {:#n6}This version of the *Brahma’s Net Sūtra* is unique in called itself the “Brahma’s Shaking Sūtra,” even though it contains the metaphor of the fishing net that’s the inspiration for the sūtra’s title in other traditions. Perhaps it refers instead to the earthquake that causes Ānanda to ask about its title. As I noted above, it also would have been a simple change in pronunciation from **j**āla (net) to **c**āla (motion) to change the title to this meaning. [\[back\]](#ref6)
+6. {:#n6}This version of the *Brahma’s Net Sūtra* is unique in calling itself the “Brahma’s Shaking Sūtra,” even though it contains the metaphor of the fishing net that’s the inspiration for the sūtra’s title in other traditions. Perhaps it refers instead to the earthquake that causes Ānanda to ask about its title. As I noted above, it also would have been a simple change in pronunciation from **j**āla (net) to **c**āla (motion) to change the title to this meaning. [\[back\]](#ref6)
 
 ---
 
