--- a/01_agama/dirgha/DA_30-5.md
+++ b/01_agama/dirgha/DA_30-5.md
@@ -12,73 +12,73 @@ next: DA_30-6.html
 ### Chapter 5: Nāgas and Garuḍas
 #### Introduction
 
-1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are four kinds of nāga. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “There are four kinds of <em>nāga</em>s. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
 {:#p1}
 
-2\. “There are four kinds of garuḍas. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
+2\. “There are four kinds of <em>garuḍa</em>s. What are the four? The first is egg-born, the second is womb-born, the third is born of moisture, and the fourth is born spontaneously. These are the four kinds.
 {:#p2}
 
 #### The Palaces of Nāgas and Garuḍas
 
-3\. “At the bottom of the great ocean, the Nāga King Sāgara has a palace that’s 80,000 yojanas across. That palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+3\. “At the bottom of the great ocean, the Nāga King Sāgara has a palace that’s 80,000 <em>yojana</em>s across. That palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p3}
 
-4\. “Between Sumeru the mountain king and Mount Khadiraka, the nāga kings Nanda and Upananda have their two palaces. Each is 6,000 yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+4\. “Between Sumeru the mountain king and Mount Khadiraka, the <em>nāga</em> kings Nanda and Upananda have their two palaces. Each is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p4}
 
-5\. “On the north shore of the great ocean, there’s a great tree called Kūṭaśālmali that’s shared between the nāga kings and garuḍas. The area under the tree is seven yojanas around, and it’s a hundred yojanas tall. It’s leaves and limbs spread out in all four directions to cover fifty yojanas.
+5\. “On the north shore of the great ocean, there’s a great tree called Kūṭaśālmali that’s shared between the <em>nāga</em> kings and <em>garuḍa</em>s. The area under the tree is seven <em>yojana</em>s around, and it’s a hundred <em>yojana</em>s tall. Its leaves and limbs spread out in all four directions to cover fifty <em>yojana</em>s.
 {:#p5}
 
-6\. “To the east of this great tree, there’s an egg-born nāga king’s palace and an egg-born garuḍa’s palace. Each of their palaces are 6,000 yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+6\. “To the east of this great tree, there’s an egg-born <em>nāga</em> king’s palace and an egg-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p6}
 
-7\. “To the south of the tree Kūṭaśālmali, there’s a womb-born nāga king’s palace and a womb-born garuḍa’s palace. Each of their palaces is 6,000 yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+7\. “To the south of the tree Kūṭaśālmali, there’s a womb-born <em>nāga</em> king’s palace and a womb-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p7}
 
-8\. “To the west of the tree Kūṭaśālmali, there’s an moisture-born nāga king’s palace and an moisture-born garuḍa’s palace. Each of their palaces is 6,000 yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+8\. “To the west of the tree Kūṭaśālmali, there’s a moisture-born <em>nāga</em> king’s palace and a moisture-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p8}
 
-9\. “To the north of that tree Kūṭaśālmali, there’s a spontaneously born nāga king’s palace and a spontaneously born garuḍa’s palace. Each of their palaces is 6,000 yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+9\. “To the north of that tree Kūṭaśālmali, there’s a spontaneously born <em>nāga</em> king’s palace and a spontaneously born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
 {:#p9}
 
 #### The Way Garuḍas Hunt Nāgas
 
-10\. “If an egg-born garuḍa wants to catch and eat a nāga, it flies down from a eastern limb of the tree Kūṭaśālmali. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 yojanas. It grabs and eats an egg-born nāga as it likes, but it can’t catch womb-born, moisture-born, or spontaneously born nāgas.
+10\. “If an egg-born <em>garuḍa</em> wants to catch and eat a <em>nāga</em>, it flies down from an eastern limb of the tree Kūṭaśālmali. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 <em>yojana</em>s. It grabs and eats an egg-born <em>nāga</em> as it likes, but it can’t catch womb-born, moisture-born, or spontaneously born <em>nāga</em>s.
 {:#p10}
 
-11\. “If a womb-born garuḍa wants to catch and eat an egg-born nāga, it flies down from an eastern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 yojanas. The garuḍa then grabs and eats an egg-born nāga as it likes.
+11\. “If a womb-born <em>garuḍa</em> wants to catch and eat an egg-born <em>nāga</em>, it flies down from an eastern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats an egg-born <em>nāga</em> as it likes.
 {:#p11}
 
-12\. “If a womb-born garuḍa wants to [catch and] eat a womb-born nāga, it flies down from a southern limb of the tree. It hits ocean’s surface with its wings, and the ocean parts for a distance of 400 yojanas. It grabs and eats a womb-born nāga as it likes, but it can’t catch moisture-born or spontaneously born nāgas.
+12\. “If a womb-born <em>garuḍa</em> wants to [catch and] eat a womb-born <em>nāga</em>, it flies down from a southern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 400 <em>yojana</em>s. It grabs and eats a womb-born <em>nāga</em> as it likes, but it can’t catch moisture-born or spontaneously born <em>nāga</em>s.
 {:#p12}
 
-13\. “If a moisture-born garuḍa wants to [catch and] eat an egg-born nāga, it flies down from an eastern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 yojanas. The garuḍa then grabs and eats an egg-born nāga as it likes.
+13\. “If a moisture-born <em>garuḍa</em> wants to [catch and] eat an egg-born <em>nāga</em>, it flies down from an eastern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats an egg-born <em>nāga</em> as it likes.
 {:#p13}
 
-14\. “If a moisture-born garuḍa wants to [catch and] eat a womb-born nāga, it flies down from a southern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 400 yojanas. The garuḍa then grabs and eats a womb-born nāga as it likes.
+14\. “If a moisture-born <em>garuḍa</em> wants to [catch and] eat a womb-born <em>nāga</em>, it flies down from a southern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 400 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats a womb-born <em>nāga</em> as it likes.
 {:#p14}
 
-15\. “If a moisture-born garuḍa wants to [catch and] eat a moisture-born nāga, it flies down from a western limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 800 yojanas. The garuḍa then grabs and eats a womb-born nāga as it likes, but it can’t catch a spontaneously born nāga and eat it.
+15\. “If a moisture-born <em>garuḍa</em> wants to [catch and] eat a moisture-born <em>nāga</em>, it flies down from a western limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 800 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats a womb-born <em>nāga</em> as it likes, but it can’t catch a spontaneously born <em>nāga</em> and eat it.
 {:#p15}
 
-16\. “If a spontaneously born garuḍa wants to [catch and] eat an egg-born nāga, it flies down from an eastern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 yojanas. The garuḍa then grabs and eats an egg-born nāga as it likes.
+16\. “If a spontaneously born <em>garuḍa</em> wants to [catch and] eat an egg-born <em>nāga</em>, it flies down from an eastern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 200 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats an egg-born <em>nāga</em> as it likes.
 {:#p16}
 
-17\. “If a spontaneously born garuḍa wants to [catch and] eat a womb-born nāga, it flies down from a southern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 400 yojanas. The garuḍa then grabs and eats a womb-born nāga as it likes.
+17\. “If a spontaneously born <em>garuḍa</em> wants to [catch and] eat a womb-born <em>nāga</em>, it flies down from a southern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 400 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats a womb-born <em>nāga</em> as it likes.
 {:#p17}
 
-18\. “If a spontaneously born garuḍa wants to [catch and] eat a moisture-born nāga, it flies down from a western limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 800 yojanas. The garuḍa then grabs and eats a womb-born nāga [as it likes].
+18\. “If a spontaneously born <em>garuḍa</em> wants to [catch and] eat a moisture-born <em>nāga</em>, it flies down from a western limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 800 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats a womb-born <em>nāga</em> [as it likes].
 {:#p18}
 
-19\. “If a spontaneously born garuḍa wants to [catch and] eat a spontaneously born nāga, it flies down from a northern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 1,600 yojanas. The garuḍa then grabs and eats a spontaneously born nāga [as it likes].
+19\. “If a spontaneously born <em>garuḍa</em> wants to [catch and] eat a spontaneously born <em>nāga</em>, it flies down from a northern limb of the tree. It hits the ocean’s surface with its wings, and the ocean parts for a distance of 1,600 <em>yojana</em>s. The <em>garuḍa</em> then grabs and eats a spontaneously born <em>nāga</em> [as it likes].
 {:#p19}
 
-20\. “Again, there are great nāgas that garuḍas can’t catch. Which are they? Nāga King Sāgara, Nāga King Nanda, Nāga King Upananda, Nāga King \*Airāvaṇa, Nāga King Dhṛtarāṣṭra, Nāga King Sudarśana, Nāga King \*Āloka, Nāga King Kakuda, Nāga King \*Kapila, Nāga King \*Apalāla, Nāga King \*Kanu (?), Nāga King \*Gokanu (?), Nāga King Anavatapta, Nāga King Supratiṣṭhita, Nāga King \*Usamkavata (?), and Nāga King Takṣaka. These great nāga kings can’t be caught and eaten by garuḍas. Nor can garuḍas catch and eat the nāgas who live near them.”
+20\. “Again, there are great <em>nāga</em>s that <em>garuḍa</em>s can’t catch. Which are they? Nāga King Sāgara, Nāga King Nanda, Nāga King Upananda, Nāga King \*Airāvaṇa, Nāga King Dhṛtarāṣṭra, Nāga King Sudarśana, Nāga King \*Āloka, Nāga King Kakuda, Nāga King \*Kapila, Nāga King \*Apalāla, Nāga King \*Kanu (?), Nāga King \*Gokanu (?), Nāga King Anavatapta, Nāga King Supratiṣṭhita, Nāga King \*Usamkavata (?), and Nāga King Takṣaka. These great <em>nāga</em> kings can’t be caught and eaten by <em>garuḍa</em>s. Nor can <em>garuḍa</em>s catch and eat the <em>nāga</em>s who live near them.”
 {:#p20}
 
 #### Wrong Views about Rebirth in Heaven
 
-21\. The Buddha told the monks, “If sentient beings uphold the nāga precepts, their minds turn to nāgas and perfect the way of nāgas, and then they are born among nāgas. If sentient beings uphold the garuḍa precepts, their minds turn to garuḍas and perfect the way of garuḍas, and then they are born among garuḍas.
+21\. The Buddha told the monks, “If sentient beings uphold the <em>nāga</em> precepts, their minds turn to <em>nāga</em>s and perfect the way of <em>nāga</em>s, and then they are born among <em>nāga</em>s. If sentient beings uphold the <em>garuḍa</em> precepts, their minds turn to <em>garuḍa</em>s and perfect the way of <em>garuḍa</em>s, and then they are born among <em>garuḍa</em>s.
 {:#p21}
 
 22\. “Sometimes, sentient beings uphold the precepts of rabbits and owls, and their minds turn to perfect the ways of rabbits and owls. They then fall [to rebirth] among rabbits and owls. Suppose sentient beings uphold the precepts of dogs, the precepts of cattle, the precepts of deer, the precepts of mutes, the precepts of Māṇibhadra, the precepts of fire, the precepts of the moon, precepts of the sun, precepts of water, precepts of giving offerings to fire, or the law of asceticism and defilement and that they think, ‘I’m upholding this … way of mutes … way of Māṇibhadra … way of fire … way of the sun and moon … way of water … way of giving offerings to fire … way of asceticism and defilement … I uphold these virtues in order to be born in heaven.’ These are wrong views.”
@@ -120,13 +120,13 @@ next: DA_30-6.html
 32\. “There are those who say, ‘Self and the world are limited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul is limited, the body is limited, and the world is limited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s actions come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are limited.’
 {:#p32}
 
-33\. “There are those who say, ‘Self and the world are unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul is unlimited, the body is unlimited, and the world is unlimited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s action come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self and the world are unlimited.’
+33\. “There are those who say, ‘Self and the world are unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul is unlimited, the body is unlimited, and the world is unlimited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s actions come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self and the world are unlimited.’
 {:#p33}
 
-34\. “There are those who say, ‘[Self and] the world are both limited and unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul is both limited and unlimited, [the body is both limited and unlimited, and the world is both limited and unlimited]. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s action come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are both limited and unlimited.’
+34\. “There are those who say, ‘[Self and] the world are both limited and unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul is both limited and unlimited, [the body is both limited and unlimited, and the world is both limited and unlimited]. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s actions come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are both limited and unlimited.’
 {:#p34}
 
-35\. “There are those who say, ‘Self and the world are neither limited nor unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul, body, [and the world] are neither limited nor unlimited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s action come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are neither limited nor unlimited.’
+35\. “There are those who say, ‘Self and the world are neither limited nor unlimited. [This is true; anything else is false.]’ They have a view of self, a view of soul, a view of body, and a view of the world regarding conditioned things. They say, ‘The soul, body, [and the world] are neither limited nor unlimited. From its conception in the womb until it reaches the charnel ground, the four elements possessed by the body thus change. After not more than seven births, the body and soul’s actions come to an end, and the self enters the class of purity.’ Therefore, they say, ‘Self [and the world] are neither limited nor unlimited.’
 {:#p35}
 
 #### Views about the Soul and Body
@@ -175,7 +175,7 @@ next: DA_30-6.html
 47\. “King Ādarśamukha then had the elephant taken away. He asked the blind men, ‘What was the elephant like?’
 {:#p47}
 
-48\. “Those blind men who found the elephant’s trunk said, ‘The elephant was like a crooked pole.’ Those who found the elephant’s tusks said, ‘The elephant was like a pestle.’ Those that found the elephant’s ears said, ‘The elephant was like a fan.’ Those that found the elephant’s head said, ‘The elephant was like a kettle.’ Those that found the elephant’s back said, ‘The elephant was like a mound.’ Those that found the elephant’s belly said, ‘The elephant was like a wall.’ Those that found the elephant’s flank said, ‘The elephant was like a tree.’ Those that found the elephant’s leg said, ‘The elephant was like a pillar.’ Those that found the elephant’s feet said, ‘The elephant was like a mortar.’ Those that found the elephant’s tail said, ‘The elephant was like a rope.’
+48\. “Those blind men who found the elephant’s trunk said, ‘The elephant was like a crooked pole.’ Those who found the elephant’s tusks said, ‘The elephant was like a pestle.’ Those who found the elephant’s ears said, ‘The elephant was like a fan.’ Those who found the elephant’s head said, ‘The elephant was like a kettle.’ Those who found the elephant’s back said, ‘The elephant was like a mound.’ Those who found the elephant’s belly said, ‘The elephant was like a wall.’ Those who found the elephant’s flanks said, ‘The elephant was like a tree.’ Those who found the elephant’s legs said, ‘The elephant was like a pillar.’ Those who found the elephant’s feet said, ‘The elephant was like a mortar.’ Those who found the elephant’s tail said, ‘The elephant was like a rope.’
 {:#p48}
 
 49\. “Each of them argued with the others, saying that the others were wrong and they were right. But what they said wasn’t the case. They kept repeating themselves until they began fighting. The king watched this with delight and laughed loudly.
@@ -200,7 +200,7 @@ But their concepts of it are contradictory.’”
 
 * {:.verse}“Suppose a person doesn’t know suffering,\\
 Doesn’t know how suffering arises,\\
-Again, they don’t know place whence\\
+Again, they don’t know the place whence\\
 Suffering can be brought to an end.\\
 Nor can they understand\\
 The path that ceases suffering’s formation.\\
