--- a/01_agama/ekottarika/16/EA_16_01.md
+++ b/01_agama/ekottarika/16/EA_16_01.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 16. Putting Out the Fire | 1. Nanda'
 type: kramdown
 base: ../../../
 previous: ../15/EA_15_10.html
-next: ../19/EA_19_01.html
+next: EA_16_02.html
 ---
 
 # [The Numerical Discourses](../index.html)
